--- a/src/assets/css/experience.scss
+++ b/src/assets/css/experience.scss
@@ -15,6 +15,11 @@
   .date {
     font-family: 'Sigmar', sans-serif;
     letter-spacing: 2px;
+    display: block;
+  }
+
+  .text {
+    display: block;
   }
 
   &-desc {
